data/derived/fa15/progs/unify/prog1667.ml.out
Characters 77-78:
  |Sine(e)->sin(pi*.e)
                    ^
Error: This expression has type expr but an expression was expected of type
         float
